k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: repram
  labels:
    name: repram
    app.kubernetes.io/name: repram
    app.kubernetes.io/part-of: repram-network
